--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -1,28 +1,12 @@
-# Gruvbox colors
-# bg0     = "#282828"
-# bg1     = "#3c3836"
-# fg      = "#ebdbb2"
-# red     = "#cc241d"
-# green   = "#98971a"
-# yellow  = "#d79921"
-# blue    = "#458588"
-# purple  = "#b16286"
-# aqua    = "#689d6a"
-# orange  = "#d65d0f"
-# gray    = "#928374"
-
 add_newline = false
-
 format = """
 $username\
 $hostname\
 $directory\
 $git_branch\
-$git_state\
 $git_status\
-$git_metrics\
 $fill\
-$cmd_duration $jobs\
+$cmd_duration$jobs\
 $line_break\
 $character"""
 
@@ -34,7 +18,6 @@ style = "#689d6a"
 read_only = " "
 truncation_length = 4
 truncate_to_repo = false
-# Add these options for better directory display
 home_symbol = "~"
 format = "[$path]($style)[$read_only]($read_only_style) "
 
@@ -48,55 +31,32 @@ symbol = " "
 format = "[$symbol$branch]($style) "
 style = "#928374"
 
+[git_status]
+format = '([$all_status$ahead_behind]($style) )'
+style = "#458588"
+modified = "✱"
+untracked = "✱"
+deleted = "✱"
+renamed = "✱"
+staged = "✱"
+ahead = "⇡${count}"
+behind = "⇣${count}"
+diverged = "⇕⇡${ahead_count}⇣${behind_count}"
+
+[git_metrics]
+disabled = true
+
+[cmd_duration]
+format = "[$duration]($style) "
+style = "#d79921"
+min_time = 2000
+show_milliseconds = false
+
 [jobs]
 symbol = ""
 style = "bold #cc241d"
 number_threshold = 1
 format = "[$symbol]($style)"
-
-[git_status]
-format = '([\[$all_status$ahead_behind\]]($style) )'
-style = "#458588"
-# Add these for more detailed git status
-ahead = "⇡${count}"
-behind = "⇣${count}"
-diverged = "⇕⇡${ahead_count}⇣${behind_count}"
-renamed = "»"
-deleted = "✘"
-
-[git_state]
-format = '\([$state( $progress_current/$progress_total)]($style)\) '
-style = "#928374"
-
-[git_metrics]
-disabled = false
-# Add format specification for metrics
-format = '[+$added]($added_style)/[-$deleted]($deleted_style) '
-
-[cmd_duration]
-format = "[$duration]($style)"
-style = "#d79921"
-# Add these for better duration formatting
-min_time = 2000
-show_milliseconds = false
-
-[memory_usage]
-symbol = " "
-# Add these for better memory usage display
-disabled = false
-threshold = 75
-style = "bold #d65d0f"
-format = "$symbol[$ram_pct]($style) "
-
-[time]
-disabled = false
-style = "bold #ebdbb2"
-format = "[$time]($style)"
-# Add these for better time formatting
-time_format = "%H:%M"
-utc_time_offset = "local"
-
-# Additional useful modules you might want to add:
 
 [nodejs]
 format = "[$symbol($version )]($style)"
