--- a/tmuxConf/.tmux.conf
+++ b/tmuxConf/.tmux.conf
@@ -7,9 +7,9 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
-# Set the default terminal mode to 256color mode
-set -g default-terminal "screen-256color"
-set -sa terminal-overrides ",xterm*:Tc"
+# Set the default terminal mode with truecolor support to avoid theme issues in Neovim
+set -g default-terminal "tmux-256color"
+set -sa terminal-overrides ",*:Tc"
 
 #bind -T copy-mode-vi C-Meta send-keys -X begin-selection
 #unbind C-Meta
@@ -74,4 +74,3 @@ set-option -g window-status-separator " "
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-
